<resources>
    <string name="app_name">ggApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="elementos_en_android">ELEMENTOS EN ANDROID</string>
    <string name="ingrese_el_nombre">Ingrese el nombre</string>
    <string name="ingrese_el_apellido">Ingrese el apellido</string>
    <string name="seleccione_el_sexo">Seleccione el sexo:</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="ingresar">Ingresar</string>
    <string name="ingresarsp">Ingresar:</string>
    <string name="rango_de_edad">Rango de Edad:</string>
    <string name="triciclo">Triciclo</string>
    <string name="moto">Moto</string>
    <string name="carro">Carro</string>
    <string name="seleccione_el_medio_de_transporte">Seleccione el medio de Transporte:</string>
    <string name="medio_transporte" />
    <string name="rango_edad" />
</resources>